--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "radio": "~0.2.0",
     "moment": "~2.5.0",
     "colors": "~0.6.2",
-    "mongodb": "~1.3.23"
+    "mongodb": "~1.3.23",
+    "crypto": "0.0.3"
   }
 }
